update all files

--- a/paytolapp/contact.html
+++ b/paytolapp/contact.html
@@ -45,7 +45,7 @@
   <main>
     <div class="container">
       <div class="column">
-        <h2>Deja de hacer filas inalcanzables y aprovecha el tiempo en otras cosas</h2>
+        <h2>Contactenos</h2>
         <img src="https://firebasestorage.googleapis.com/v0/b/lantonium.appspot.com/o/sena%2Flogo.png?alt=media&token=87a263cc-c652-403b-9902-0ace2552823a" alt="Logo" width="200" height="200">
       </div>
       <div class="column">
