--- a/paytolapp/about.html
+++ b/paytolapp/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PayTollApp</title>
+  <title>PayTollApp - Acerca de...</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -45,7 +45,7 @@
   <main>
     <div class="container">
       <div class="column">
-        <h2>Deja de hacer filas inalcanzables y aprovecha el tiempo en otras cosas</h2>
+        <h2>Acerca de nosotros..</h2>
         <img src="https://firebasestorage.googleapis.com/v0/b/lantonium.appspot.com/o/sena%2Flogo.png?alt=media&token=87a263cc-c652-403b-9902-0ace2552823a" alt="Logo" width="200" height="200">
       </div>
       <div class="column">
