--- a/paytolapp/services.html
+++ b/paytolapp/services.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PayTollApp - Servicios</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styleser.css">
 </head>
 <body>
   <header>
@@ -43,26 +43,47 @@
   </header>
 
   <main>
-    <div class="container">
-      <div class="column">
-        <h2>Nuestros servicios</h2>
-        <img src="https://firebasestorage.googleapis.com/v0/b/lantonium.appspot.com/o/sena%2Flogo.png?alt=media&token=87a263cc-c652-403b-9902-0ace2552823a" alt="Logo" width="200" height="200">
-      </div>
-      <div class="column">
-        <div class="form-container">
-          <img src="https://firebasestorage.googleapis.com/v0/b/lantonium.appspot.com/o/sena%2Fusuario.png?alt=media&token=82394cb1-35d7-4283-8809-b569b28ccfa0" alt="Registro" width="70" height="70">
-          <input type="text" placeholder="Usuario">
-          <input type="password" placeholder="Contraseña">
-          <a href="register.html" class="registro">Nuevo Registro</a>
+    <section class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="imagen-container">
+            <img src="imagen1.jpg" alt="Imagen 1">
+            <h2>Título 1</h2>
+            <p>Descripción 1</p>
+            <button class="btn btn-primary">Botón 1</button>
+          </div>
         </div>
-        <h4>Regístrate y sé parte de nuestra comunidad</h4>
+        <div class="col-md-6">
+          <div class="imagen-container">
+            <img src="imagen2.jpg" alt="Imagen 2">
+            <h2>Título 2</h2>
+            <p>Descripción 2</p>
+            <button class="btn btn-primary">Botón 2</button>
+          </div>
+        </div>
       </div>
-    </div>
+      <div class="row">
+        <div class="col-md-6">
+          <div class="imagen-container">
+            <img src="imagen3.jpg" alt="Imagen 3">
+            <h2>Título 3</h2>
+            <p>Descripción 3</p>
+            <button class="btn btn-primary">Botón 3</button>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="imagen-container">
+            <img src="imagen4.jpg" alt="Imagen 4">
+            <h2>Título 4</h2>
+            <p>Descripción 4</p>
+            <button class="btn btn-primary">Botón 4</button>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
   
-  
-
-  <footer>
+   <footer>
     <div class="container-fluid bg-dark text-light">
       <div class="row">
         <div class="col-md-6">
