update de paginas de about, contact y services

--- a/paytolapp/about.html
+++ b/paytolapp/about.html
@@ -45,17 +45,16 @@
   <main>
     <div class="container">
       <div class="column">
+        <h1>Acerca de PayTollApp</h1>
         <h2>Acerca de nosotros..</h2>
-        <img src="https://firebasestorage.googleapis.com/v0/b/lantonium.appspot.com/o/sena%2Flogo.png?alt=media&token=87a263cc-c652-403b-9902-0ace2552823a" alt="Logo" width="200" height="200">
+        <p><B>PayTollApp</B> es una aplicación que permite a los usuarios pagar peajes de forma rápida y segura. Nuestro objetivo es facilitar el pago de peajes a los conductores de vehículos, evitando las largas filas y el tiempo de espera. Con <B>PayTollApp</B>, los conductores pueden pagar peajes desde la comodidad de su vehículo, sin necesidad de detenerse. Nuestra aplicación es fácil de usar y está disponible tambien para dispositivos móviles.</p>
       </div>
       <div class="column">
         <div class="form-container">
-          <img src="https://firebasestorage.googleapis.com/v0/b/lantonium.appspot.com/o/sena%2Fusuario.png?alt=media&token=82394cb1-35d7-4283-8809-b569b28ccfa0" alt="Registro" width="70" height="70">
-          <input type="text" placeholder="Usuario">
-          <input type="password" placeholder="Contraseña">
-          <a href="register.html" class="registro">Nuevo Registro</a>
-        </div>
-        <h4>Regístrate y sé parte de nuestra comunidad</h4>
+          <p></p>
+          <p>¡Bienvenido a nuestra aplicación de peajes!</p>
+          <p></p>
+         <p>Desarrollada por José Arciniegas, Fredy Peralta y Luis González como parte del proyecto de <B>Tecnología en Análisis y Desarrollo de Software</B>, este innovador sistema ha sido meticulosamente construido durante el periodo 2023-2024. Cumpliendo con todos los requisitos establecidos y utilizando diagramas exhaustivos, nuestro equipo ha creado un prototipo sólido que abarca desde el flujo de la aplicación hasta la diagramación de la usabilidad.</p>  
       </div>
     </div>
   </main>
