--- a/paytolapp/contact.html
+++ b/paytolapp/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,15 +8,19 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
   <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-gradient">
       <div class="container-fluid d-flex align-items-center">
         <a class="navbar-brand d-flex align-items-center" href="#">
-          <img src="https://firebasestorage.googleapis.com/v0/b/lantonium.appspot.com/o/sena%2Flogo.png?alt=media&token=87a263cc-c652-403b-9902-0ace2552823a" alt="Logo" width="48" height="48">
+          <img
+            src="https://firebasestorage.googleapis.com/v0/b/lantonium.appspot.com/o/sena%2Flogo.png?alt=media&token=87a263cc-c652-403b-9902-0ace2552823a"
+            alt="Logo" width="48" height="48">
           <span style="font-size: 24px; font-weight: bold;">PayTollApp</span>
         </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -39,28 +44,47 @@
           </form>
         </div>
       </div>
-    </nav>    
+    </nav>
   </header>
 
   <main>
     <div class="container">
-      <div class="column">
-        <h2>Contactenos</h2>
-        <img src="https://firebasestorage.googleapis.com/v0/b/lantonium.appspot.com/o/sena%2Flogo.png?alt=media&token=87a263cc-c652-403b-9902-0ace2552823a" alt="Logo" width="200" height="200">
-      </div>
-      <div class="column">
-        <div class="form-container">
-          <img src="https://firebasestorage.googleapis.com/v0/b/lantonium.appspot.com/o/sena%2Fusuario.png?alt=media&token=82394cb1-35d7-4283-8809-b569b28ccfa0" alt="Registro" width="70" height="70">
-          <input type="text" placeholder="Usuario">
-          <input type="password" placeholder="Contraseña">
-          <a href="register.html" class="registro">Nuevo Registro</a>
+      <div class="row justify-content-center align-items-start">
+        <div class="col-md-6">
+          <h2 class="text-center">Contacto</h2>
+          <img
+            src="https://firebasestorage.googleapis.com/v0/b/lantonium.appspot.com/o/sena%2Flogo.png?alt=media&token=87a263cc-c652-403b-9902-0ace2552823a"
+            alt="Logo" class="img-fluid mx-auto d-block" width="200" height="200">
+          <p class="text-center">¡Estamos aquí para ayudarte! Ponte en contacto con nosotros.</p>
         </div>
-        <h4>Regístrate y sé parte de nuestra comunidad</h4>
+        <div class="col-md-6">
+          <div class="card">
+            <div class="card-body">
+              <h4 class="card-title text-center">Formulario de Contacto</h4>
+              <form>
+                <div class="form-group">
+                  <label for="nombre">Nombre:</label>
+                  <input type="text" id="nombre" name="nombre" class="form-control" placeholder="Tu nombre">
+                </div>
+                <div class="form-group">
+                  <label for="correo">Correo electrónico:</label>
+                  <input type="email" id="correo" name="correo" class="form-control"
+                    placeholder="Tu correo electrónico">
+                </div>
+                <div class="form-group">
+                  <label for="mensaje">Mensaje:</label>
+                  <textarea id="mensaje" name="mensaje" class="form-control" rows="5"
+                    placeholder="Escribe tu mensaje aquí"></textarea>
+                </div>
+                <button type="submit" class="btn btn-primary btn-block">Enviar</button>
+              </form>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </main>
-  
-  
+
 
   <footer>
     <div class="container-fluid bg-dark text-light">
@@ -69,14 +93,65 @@
           <p>© 2024 PayTollApp</p>
         </div>
         <div class="col-md-6 text-end">
-          <a href="#"><img src="https://firebasestorage.googleapis.com/v0/b/lantonium.appspot.com/o/sena%2Ffacebook.png?alt=media&token=1dd8cb7e-dcee-48c2-95ba-37625d55189e" alt="Facebook" width="32" height="32"></a>  |  
-          <a href="#"><img src="https://firebasestorage.googleapis.com/v0/b/lantonium.appspot.com/o/sena%2Fgorjeo.png?alt=media&token=cb56d6fd-0d12-4325-ae3e-39945a96d239" alt="X" width="32" height="32"></a>  | 
-          <a href="#"><img src="https://firebasestorage.googleapis.com/v0/b/lantonium.appspot.com/o/sena%2Finstagram.png?alt=media&token=0b505249-8e9d-4080-93bd-0a3ac6b1b5b6" alt="Instagram" width="32" height="32"></a>
+          <a href="#"><img
+              src="https://firebasestorage.googleapis.com/v0/b/lantonium.appspot.com/o/sena%2Ffacebook.png?alt=media&token=1dd8cb7e-dcee-48c2-95ba-37625d55189e"
+              alt="Facebook" width="32" height="32"></a> |
+          <a href="#"><img
+              src="https://firebasestorage.googleapis.com/v0/b/lantonium.appspot.com/o/sena%2Fgorjeo.png?alt=media&token=cb56d6fd-0d12-4325-ae3e-39945a96d239"
+              alt="X" width="32" height="32"></a> |
+          <a href="#"><img
+              src="https://firebasestorage.googleapis.com/v0/b/lantonium.appspot.com/o/sena%2Finstagram.png?alt=media&token=0b505249-8e9d-4080-93bd-0a3ac6b1b5b6"
+              alt="Instagram" width="32" height="32"></a>
         </div>
       </div>
     </div>
   </footer>
 
+  <div class="modal fade" id="confirmacionModal" tabindex="-1" aria-labelledby="confirmacionModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="confirmacionModalLabel">¡Confirmación!</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <p id="mensajeConfirmacion"></p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
+
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script>
+    $(document).ready(function () {
+      // Cuando se envía el formulario
+      $('form').submit(function (event) {
+        // Evitar el comportamiento de envío de formulario predeterminado
+        event.preventDefault();
+
+        // Obtener los valores del formulario
+        var nombre = $('#nombre').val();
+        var correo = $('#correo').val();
+        var mensaje = $('#mensaje').val();
+
+        // Construir el mensaje de confirmación personalizado
+        var confirmacionMensaje = '¡Hola ' + nombre + '! Tu mensaje "' + mensaje + '" ha sido enviado correctamente a la dirección de correo ' + correo + '.';
+
+        // Mostrar el mensaje de confirmación en el modal
+        $('#mensajeConfirmacion').text(confirmacionMensaje);
+        $('#confirmacionModal').modal('show');
+      });
+    });
+  </script>
+
 </body>
+
 </html>
