updated the files

--- a/paytolapp/contact.html
+++ b/paytolapp/contact.html
@@ -15,7 +15,7 @@
       <div class="container-fluid d-flex align-items-center">
         <a class="navbar-brand d-flex align-items-center" href="#">
           <img
-            src="https://firebasestorage.googleapis.com/v0/b/lantonium.appspot.com/o/sena%2Flogo.png?alt=media&token=87a263cc-c652-403b-9902-0ace2552823a"
+            src="https://firebasestorage.googleapis.com/v0/b/paytollapp.appspot.com/o/logo.png?alt=media&token=74f8d3f5-49a9-4c14-b7ae-95c64156ba8e"
             alt="Logo" width="48" height="48">
           <span style="font-size: 24px; font-weight: bold;">PayTollApp</span>
         </a>
@@ -53,7 +53,7 @@
         <div class="col-md-6">
           <h2 class="text-center">Contacto</h2>
           <img
-            src="https://firebasestorage.googleapis.com/v0/b/lantonium.appspot.com/o/sena%2Flogo.png?alt=media&token=87a263cc-c652-403b-9902-0ace2552823a"
+            src="https://firebasestorage.googleapis.com/v0/b/paytollapp.appspot.com/o/logo.png?alt=media&token=74f8d3f5-49a9-4c14-b7ae-95c64156ba8e"
             alt="Logo" class="img-fluid mx-auto d-block" width="200" height="200">
           <p class="text-center">¡Estamos aquí para ayudarte! Ponte en contacto con nosotros.</p>
         </div>
@@ -94,13 +94,13 @@
         </div>
         <div class="col-md-6 text-end">
           <a href="#"><img
-              src="https://firebasestorage.googleapis.com/v0/b/lantonium.appspot.com/o/sena%2Ffacebook.png?alt=media&token=1dd8cb7e-dcee-48c2-95ba-37625d55189e"
+              src="https://firebasestorage.googleapis.com/v0/b/paytollapp.appspot.com/o/facebook.png?alt=media&token=fad26cb1-7439-4970-96d5-8c6b44ee9d4f"
               alt="Facebook" width="32" height="32"></a> |
           <a href="#"><img
-              src="https://firebasestorage.googleapis.com/v0/b/lantonium.appspot.com/o/sena%2Fgorjeo.png?alt=media&token=cb56d6fd-0d12-4325-ae3e-39945a96d239"
+              src="https://firebasestorage.googleapis.com/v0/b/paytollapp.appspot.com/o/gorjeo.png?alt=media&token=d7e1f9ab-9a0d-4521-827c-8125a66dd252"
               alt="X" width="32" height="32"></a> |
           <a href="#"><img
-              src="https://firebasestorage.googleapis.com/v0/b/lantonium.appspot.com/o/sena%2Finstagram.png?alt=media&token=0b505249-8e9d-4080-93bd-0a3ac6b1b5b6"
+              src="https://firebasestorage.googleapis.com/v0/b/paytollapp.appspot.com/o/instagram.png?alt=media&token=b8507f84-8ddd-4160-a007-52e5aee8d3a3"
               alt="Instagram" width="32" height="32"></a>
         </div>
       </div>
@@ -113,15 +113,13 @@
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title" id="confirmacionModalLabel">¡Confirmación!</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
+        <!--<span aria-hidden="true">&times;</span>-->
           </button>
         </div>
         <div class="modal-body">
           <p id="mensajeConfirmacion"></p>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
         </div>
       </div>
     </div>
