--- a/paytolapp/index.html
+++ b/paytolapp/index.html
@@ -12,7 +12,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-gradient">
       <div class="container-fluid d-flex align-items-center">
         <a class="navbar-brand d-flex align-items-center" href="#">
-          <img src="https://firebasestorage.googleapis.com/v0/b/lantonium.appspot.com/o/sena%2Flogo.png?alt=media&token=87a263cc-c652-403b-9902-0ace2552823a" alt="Logo" width="48" height="48">
+          <img src="https://firebasestorage.googleapis.com/v0/b/paytollapp.appspot.com/o/logo.png?alt=media&token=74f8d3f5-49a9-4c14-b7ae-95c64156ba8e" alt="Logo" width="48" height="48">
           <span style="font-size: 24px; font-weight: bold;">PayTollApp</span>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -46,14 +46,14 @@
     <div class="container">
       <div class="column">
         <h2>Deja de hacer filas inalcanzables y aprovecha el tiempo en otras cosas</h2>
-        <img src="https://firebasestorage.googleapis.com/v0/b/lantonium.appspot.com/o/sena%2Flogo.png?alt=media&token=87a263cc-c652-403b-9902-0ace2552823a" alt="Logo" width="200" height="200">
+        <img src="https://firebasestorage.googleapis.com/v0/b/paytollapp.appspot.com/o/logo.png?alt=media&token=74f8d3f5-49a9-4c14-b7ae-95c64156ba8e" alt="Logo" width="200" height="200">
       </div>
       <div class="column">
         <div class="form-container">
-          <img src="https://firebasestorage.googleapis.com/v0/b/lantonium.appspot.com/o/sena%2Fusuario.png?alt=media&token=82394cb1-35d7-4283-8809-b569b28ccfa0" alt="Registro" width="70" height="70">
+          <img src="https://firebasestorage.googleapis.com/v0/b/paytollapp.appspot.com/o/usuario.png?alt=media&token=9dae64fe-a4b3-4853-9a7d-559116cae44e" alt="Registro" width="70" height="70">
           <input type="text" placeholder="Usuario">
           <input type="password" placeholder="Contraseña">
-          <a href="register.html" class="registro">Nuevo Registro</a>
+          <a href="register.html" class="registro">Registro</a>
         </div>
         <h4>Regístrate y sé parte de nuestra comunidad</h4>
       </div>
@@ -69,9 +69,9 @@
           <p>© 2024 PayTollApp</p>
         </div>
         <div class="col-md-6 text-end">
-          <a href="#"><img src="https://firebasestorage.googleapis.com/v0/b/lantonium.appspot.com/o/sena%2Ffacebook.png?alt=media&token=1dd8cb7e-dcee-48c2-95ba-37625d55189e" alt="Facebook" width="32" height="32"></a>  |  
-          <a href="#"><img src="https://firebasestorage.googleapis.com/v0/b/lantonium.appspot.com/o/sena%2Fgorjeo.png?alt=media&token=cb56d6fd-0d12-4325-ae3e-39945a96d239" alt="X" width="32" height="32"></a>  | 
-          <a href="#"><img src="https://firebasestorage.googleapis.com/v0/b/lantonium.appspot.com/o/sena%2Finstagram.png?alt=media&token=0b505249-8e9d-4080-93bd-0a3ac6b1b5b6" alt="Instagram" width="32" height="32"></a>
+          <a href="#"><img src="https://firebasestorage.googleapis.com/v0/b/paytollapp.appspot.com/o/facebook.png?alt=media&token=fad26cb1-7439-4970-96d5-8c6b44ee9d4f" alt="Facebook" width="32" height="32"></a>  |  
+          <a href="#"><img src="https://firebasestorage.googleapis.com/v0/b/paytollapp.appspot.com/o/gorjeo.png?alt=media&token=d7e1f9ab-9a0d-4521-827c-8125a66dd252" alt="X" width="32" height="32"></a>  | 
+          <a href="#"><img src="https://firebasestorage.googleapis.com/v0/b/paytollapp.appspot.com/o/instagram.png?alt=media&token=b8507f84-8ddd-4160-a007-52e5aee8d3a3" alt="Instagram" width="32" height="32"></a>
         </div>
       </div>
     </div>
