--- a/paytolapp/services.html
+++ b/paytolapp/services.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PayTollApp - Servicios</title>
+  <title>PayTollApp</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="styleser.css">
 </head>
@@ -12,7 +12,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-gradient">
       <div class="container-fluid d-flex align-items-center">
         <a class="navbar-brand d-flex align-items-center" href="#">
-          <img src="https://firebasestorage.googleapis.com/v0/b/lantonium.appspot.com/o/sena%2Flogo.png?alt=media&token=87a263cc-c652-403b-9902-0ace2552823a" alt="Logo" width="48" height="48">
+          <img src="https://firebasestorage.googleapis.com/v0/b/paytollapp.appspot.com/o/logo.png?alt=media&token=74f8d3f5-49a9-4c14-b7ae-95c64156ba8e" alt="Logo" width="48" height="48">
           <span style="font-size: 24px; font-weight: bold;">PayTollApp</span>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -47,7 +47,7 @@
       <div class="row">
         <div class="col-md-6">
           <div class="imagen-container">
-            <img src="https://firebasestorage.googleapis.com/v0/b/lantonium.appspot.com/o/sena%2Fregistrar_vehiculo.png?alt=media&token=5a4a6aea-1a10-4e64-91b8-814a3c94187e" alt="Imagen 1">
+            <img src="https://firebasestorage.googleapis.com/v0/b/paytollapp.appspot.com/o/registrar_vehiculo.png?alt=media&token=37578a36-b1aa-4d22-b7e3-3e00ae91b3b1" alt="Imagen 1">
             <h2></h2>
             <p></p>
             <button class="btn btn-primary">Registrar Vehículo</button>
@@ -55,7 +55,7 @@
         </div>
         <div class="col-md-6">
           <div class="imagen-container">
-            <img src="https://firebasestorage.googleapis.com/v0/b/lantonium.appspot.com/o/sena%2Frealizar_pagos.png?alt=media&token=af1753d6-bccb-4077-84c0-43da1b10a0bb" alt="Imagen 2">
+            <img src="https://firebasestorage.googleapis.com/v0/b/paytollapp.appspot.com/o/realizar_pagos.png?alt=media&token=04740b92-4d78-4687-b8e0-9e21cf1447fa" alt="Imagen 2">
             <h2></h2>
             <p></p>
             <button class="btn btn-primary">Realizar Pagos</button>
@@ -65,7 +65,7 @@
       <div class="row">
         <div class="col-md-6">
           <div class="imagen-container">
-            <img src="https://firebasestorage.googleapis.com/v0/b/lantonium.appspot.com/o/sena%2Fregistro_pagos.png?alt=media&token=e7fe80f7-ae0a-4407-86c1-d42f53645d0b" alt="Imagen 3">
+            <img src="https://firebasestorage.googleapis.com/v0/b/paytollapp.appspot.com/o/registro_pagos.png?alt=media&token=8a94b5f3-049c-4c75-8c9c-243d1570162a" alt="Imagen 3">
             <h2></h2>
             <p></p>
             <button class="btn btn-primary">Registro de Pagos</button>
@@ -73,7 +73,7 @@
         </div>
         <div class="col-md-6">
           <div class="imagen-container">
-            <img src="https://firebasestorage.googleapis.com/v0/b/lantonium.appspot.com/o/sena%2Fsolicitudes.png?alt=media&token=c4de33a5-6934-443d-933b-703c4e39825e" alt="Imagen 4">
+            <img src="https://firebasestorage.googleapis.com/v0/b/paytollapp.appspot.com/o/solicitudes.png?alt=media&token=b3e8a3df-a66d-4671-8473-3d9d2913e8c8" alt="Imagen 4">
             <h2></h2>
             <p></p>
             <button class="btn btn-primary">Solicitudes</button>
@@ -90,9 +90,9 @@
           <p>© 2024 PayTollApp</p>
         </div>
         <div class="col-md-6 text-end">
-          <a href="#"><img src="https://firebasestorage.googleapis.com/v0/b/lantonium.appspot.com/o/sena%2Ffacebook.png?alt=media&token=1dd8cb7e-dcee-48c2-95ba-37625d55189e" alt="Facebook" width="32" height="32"></a>  |  
-          <a href="#"><img src="https://firebasestorage.googleapis.com/v0/b/lantonium.appspot.com/o/sena%2Fgorjeo.png?alt=media&token=cb56d6fd-0d12-4325-ae3e-39945a96d239" alt="X" width="32" height="32"></a>  | 
-          <a href="#"><img src="https://firebasestorage.googleapis.com/v0/b/lantonium.appspot.com/o/sena%2Finstagram.png?alt=media&token=0b505249-8e9d-4080-93bd-0a3ac6b1b5b6" alt="Instagram" width="32" height="32"></a>
+          <a href="#"><img src="https://firebasestorage.googleapis.com/v0/b/paytollapp.appspot.com/o/facebook.png?alt=media&token=fad26cb1-7439-4970-96d5-8c6b44ee9d4f" alt="Facebook" width="32" height="32"></a>  |  
+          <a href="#"><img src="https://firebasestorage.googleapis.com/v0/b/paytollapp.appspot.com/o/gorjeo.png?alt=media&token=d7e1f9ab-9a0d-4521-827c-8125a66dd252" alt="X" width="32" height="32"></a>  | 
+          <a href="#"><img src="https://firebasestorage.googleapis.com/v0/b/paytollapp.appspot.com/o/instagram.png?alt=media&token=b8507f84-8ddd-4160-a007-52e5aee8d3a3" alt="Instagram" width="32" height="32"></a>
         </div>
       </div>
     </div>
