--- a/paytolapp/register.html
+++ b/paytolapp/register.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PayTollApp</title>
+  <link rel="icon" href="https://firebasestorage.googleapis.com/v0/b/paytollapp.appspot.com/o/favicon.ico?alt=media&token=fc3a6b7b-a969-47ed-aa80-744c9acf9239" type="image/x-icon">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="stylereg.css">
 </head>
@@ -110,13 +111,13 @@
           <p>© 2024 PayTollApp</p>
         </div>
         <div class="col-md-6 text-end">
-          <a href="#"><img
+          <a href="https://www.facebook.com/profile.php?id=61558283046052"><img
               src="https://firebasestorage.googleapis.com/v0/b/paytollapp.appspot.com/o/facebook.png?alt=media&token=fad26cb1-7439-4970-96d5-8c6b44ee9d4f"
               alt="Facebook" width="32" height="32"></a> |
-          <a href="#"><img
+          <a href="https://twitter.com/paytoll_app"><img
               src="https://firebasestorage.googleapis.com/v0/b/paytollapp.appspot.com/o/gorjeo.png?alt=media&token=d7e1f9ab-9a0d-4521-827c-8125a66dd252"
               alt="X" width="32" height="32"></a> |
-          <a href="#"><img
+          <a href="https://www.instagram.com/paytollapp/"><img
               src="https://firebasestorage.googleapis.com/v0/b/paytollapp.appspot.com/o/instagram.png?alt=media&token=b8507f84-8ddd-4160-a007-52e5aee8d3a3"
               alt="Instagram" width="32" height="32"></a>
         </div>
